createBus with first test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 , "version": "0.0.1alpha"
 , "author": "Angel 'Java' Lopez <webmaster@ajlopez.com> (http://www.ajlopez.com)"
 , "repository": { "type": "git", "url": "git://github.com/ajlopez/SimpleBus.git" }
-, "main": "./lib/simpleactors.js"
+, "main": "./lib/simplebus.js"
 , "engines": { "node": ">= 0.6.0 && < 0.9.0" }
 , "scripts": {
     "test": "nodeunit test"
