--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 { "name": "simplebus"
 , "description": "Simple Service Bus for Node.js, Work in Progress"
 , "keywords": [ "messaging", "service bus", "nodejs", "javascript" ]
-, "version": "0.0.1alpha"
+, "version": "0.0.1"
 , "author": "Angel 'Java' Lopez <webmaster@ajlopez.com> (http://www.ajlopez.com)"
 , "repository": { "type": "git", "url": "git://github.com/ajlopez/SimpleBus.git" }
 , "main": "./lib/simplebus.js"
@@ -10,7 +10,7 @@
     "test": "nodeunit test"
   }
 , "dependencies": {
-	"simplemessages": "0.0.3",
+	"simpleremote": "0.0.3",
 	"simplefunc": "0.0.2"
   }
 , "devDependencies": {
